[package]
name = "wayflutter"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
bon = "3.7.2"
env_logger = "0.11.8"
futures = "0.3.31"
glutin = "0.32.3"
log = "0.4.28"
raw-window-handle = "0.6.2"
smithay-client-toolkit = "0.20.0"
smol = "2.0.2"
thiserror = "2.0.16"
wayland-backend = { version = "0.3.11", features = ["client_system"] }
wayland-client = "0.31.11"

[build-dependencies]
bindgen = "0.72.1"
